--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@dicebear/collection": "^7.0.3",
+    "@dicebear/core": "^7.0.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.8.1",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
@@ -25,6 +31,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "prisma": "^5.8.1",
     "typescript": "^5"
   }
 }
