chore: add colord and dayjs dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "colord": "^2.9.3",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
