--- a/package.json
+++ b/package.json
@@ -22,10 +22,18 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.10",
+    "filepond": "^4.30.6",
+    "filepond-plugin-file-encode": "^2.1.14",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-filepond": "^7.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
