--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.18.0",
+    "mapbox-gl": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
     "react-filepond": "^7.1.2"
   },
