--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-filepond": "^7.1.2"
   },
