chore: add react-icons, react-map-gl and @types/mapbox-gl dependencies

--- a/package.json
+++ b/package.json
@@ -22,31 +22,34 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.10",
+    "filepond": "^4.30.6",
     "filepond-plugin-file-encode": "^2.1.14",
     "filepond-plugin-file-validate-size": "^2.2.8",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-resize": "^2.0.10",
-    "filepond": "^4.30.6",
     "framer-motion": "^10.18.0",
     "mapbox-gl": "^3.1.0",
     "next": "14.0.4",
+    "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hot-toast": "^2.4.1",
-    "react": "^18"
+    "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/mapbox-gl": "^2.7.19",
     "@types/node": "^20",
-    "@types/react-dom": "^18",
     "@types/react": "^18",
-    "eslint-config-next": "14.0.4",
+    "@types/react-dom": "^18",
     "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "prisma": "^5.8.1",
     "typescript": "^5"
   }
