--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-filepond": "^7.1.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
