--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-viewport-list": "^7.1.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
