--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-select": "^5.8.0",
-    "react-viewport-list": "^7.1.2"
+    "react-viewport-list": "^7.1.2",
+    "react-zoom-pan-pinch": "^3.3.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
