--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-map-gl": "^7.1.7",
     "react-select": "^5.8.0",
     "react-viewport-list": "^7.1.2",
-    "react-zoom-pan-pinch": "^3.3.0"
+    "react-zoom-pan-pinch": "^3.3.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
