--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-select": "^5.8.0",
     "react-viewport-list": "^7.1.2",
     "react-zoom-pan-pinch": "^3.3.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.6",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
