--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "filepond-plugin-image-preview": "^4.6.12",
     "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.18.0",
+    "isomorphic-unfetch": "^4.0.2",
     "mapbox-gl": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
