--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
