--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-datalabels": "^2.2.0",
     "colord": "^2.9.3",
+    "cookies-next": "^4.1.0",
     "dayjs": "^1.11.10",
     "filepond": "^4.30.6",
     "filepond-plugin-file-encode": "^2.1.14",
@@ -32,6 +33,7 @@
     "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.18.0",
     "isomorphic-unfetch": "^4.0.2",
+    "js-cookie": "^3.0.5",
     "mapbox-gl": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
@@ -47,7 +49,7 @@
     "react-select": "^5.8.0",
     "react-viewport-list": "^7.1.2",
     "react-zoom-pan-pinch": "^3.3.0",
-    "sharp": "^0.32.6",
+    "sharp": "^0.33.2",
     "swr": "^2.2.4"
   },
   "devDependencies": {
@@ -58,6 +60,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "file-loader": "^6.2.0",
+    "prettier": "^3.2.4",
     "prisma": "^5.8.1",
     "typescript": "^5"
   }
