--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,17 @@
-
 {
-    "plugins": ["prettier"],
-    "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
-    "rules": {
-      "prettier/prettier": "error"
-    }
+  "plugins": ["prettier"],
+  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "rules": {},
+  "prettier/prettier": "error",
+  "printWidth": 120,
+  "useTabs": false,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "jsxSingleQuote": false,
+  "bracketSameLine": false,
+  "endOfLine": "lf"
 }
