--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,17 +16,17 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
-      }
+        "name": "next",
+      },
     ],
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["components/*"],
-      "@/utils/*":["utils/*"],
-      "@/styles/*":["styles/*"],
-      "@/types/*": ["types/*"]
-    }
+      "@/utils/*": ["utils/*"],
+      "@/styles/*": ["styles/*"],
+      "@/types/*": ["types/*"],
+    },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
 }
