--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.8.1",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@table-library/react-table-library": "^4.1.7",
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
@@ -38,14 +40,13 @@
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-data-table-component": "^7.6.2",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
+    "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "react-viewport-list": "^7.1.2",
     "react-zoom-pan-pinch": "^3.3.0",
