--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dicebear/core": "^7.0.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@next/eslint-plugin-next": "^14.1.0",
     "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.1.0",
     "@table-library/react-table-library": "^4.1.7",
@@ -59,13 +60,19 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "file-loader": "^6.2.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.2.5",
     "prisma": "^5.8.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
