--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "printWidth": 120,
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "semi": true,
   "singleQuote": true,
   "bracketSpacing": true,
