--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "react-dom": "^18",
     "react-filepond": "^7.1.2",
     "react-hook-form": "^7.49.3",
-    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.4",
     "react-viewport-list": "^7.1.2",
     "react-zoom-pan-pinch": "^3.3.0",
     "react": "^18",
